--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Макет</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -84,4 +84,5 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna ante, 
         </footer>
     </div>
 </body>
+
 </html>
